PIRANHA-518 Aligned buttons correctly

--- a/site/apps/main/static/css/main.css
+++ b/site/apps/main/static/css/main.css
@@ -383,7 +383,9 @@ th {
 }
 
 .toolbox .button {
-	width:100%;
+	width:95%;
+    margin-bottom:3px;
+    margin-top:2px;
 }
 .toolbox{
 /*	display:block;*/
